--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -15,16 +15,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - uses: actions/setup-python@v6
       with:
         python-version: "3.13"
     - name: Install dependencies
       working-directory: ./connector
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install pylint
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with Pylint
       working-directory: ./connector
       run: |
