--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: connector-canary-release
-          path: dist/
+          path: ./connector/dist/
   release:
     runs-on: ubuntu-latest
     needs:
